<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/tathvabg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.falalu.roadtotathva.Question7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question7"
        android:id="@+id/question7"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer7"
        android:width="200dp"
        android:layout_below="@+id/question7"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:hint="@string/answer1"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit1"
        android:id="@+id/button"
        android:layout_below="@+id/answer7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="checkAnswer" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timernot"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/question7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:text="Next Attempt After"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/timernot"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textColor="#ff0000"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:id="@+id/popup"
        android:visibility="gone">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_centerHorizontal="true"
            android:visibility="visible" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/popupphoto"
                    android:src="@mipmap/ccc"
                    android:layout_marginTop="20dp"
                    android:visibility="visible"
                    android:background="@drawable/customborder"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center"
                    android:text="Central Computer Centre is a central computing facility which caters to the computing requirements of the whole community of this institution. The working hours of this centre is on round the clock on all working days except Republic day, Independence day, Thiruvonam, Vijayadashami, Gandhi Jayanthi, Bakrid and Christmas.\n\n
The centre is equipped with three IBM X\-series servers, one Dell PowerEdge 6600 Quad Processor Xeon Server, six Dell PowerEdge 2600 Dual Processor Server and one Sunfire V210 Server. The Desktops and Thin clients are connected to the servers through gigabit switches and CAT6 UTP cables. The centre is connected to the campus-networking centre with backbone of 32Mbps through a Nortel L3 switch and in turn to internet.\n\n
All students and staff in the Institute are entitled to have a login in the centre. Students are permitted to enter the Central Computer Centre only with their Identity Card. Staff Members can get a login in their department server. Normal logins have the same characteristics as those allocated to the students. Any specific requests need to be forwarded through the department coordinator. "
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/popupphoto"
                    android:layout_marginTop="10dp"
                    android:id="@+id/popuptext" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:id="@+id/popupbutton"
                    android:layout_below="@+id/popuptext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:onClick="nextques" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
