<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/tathvabg"
    tools:context="com.falalu.roadtotathva.Question1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question1"
        android:gravity="center"
        android:src="@drawable/aavishkar1"
        android:layout_marginTop="-200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/answer1"
    android:maxLines="1"
    android:width="200dp"
    android:layout_below="@+id/question1"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="-230dp"
    android:hint="@string/answer1"
        android:visibility="visible"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit1"
        android:id="@+id/button"
        android:layout_below="@+id/answer1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="checkAnswer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timernot"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/question1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:text="Next Attempt After"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_below="@+id/timernot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:textColor="#ff0000" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:id="@+id/popup"
        android:visibility="gone">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_centerHorizontal="true"
            android:visibility="visible" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/popupphoto"
                    android:src="@mipmap/aavishkaar"
                    android:layout_marginTop="20dp"
                    android:visibility="visible"
                    android:background="@drawable/customborder"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center"
                    android:text="Social initiative of Tathva ,the annual techno\-management fest of National Institute of Technology, Calicut, in association with the Social Engineering Forum"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/popupphoto"
                    android:layout_marginTop="10dp"
                    android:id="@+id/popuptext" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:id="@+id/popupbutton"
                    android:layout_below="@+id/popuptext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:onClick="nextques" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>
